# axiom

./: .gitignore  AXIOM_Language_Plan.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  DESIGN.md  MEMORY_ALLOCATION_RESEARCH.md  OPTIMIZATION_RESEARCH.md  README.md
.github/workflows/: ci.yml
.pipeline/: PIPELINE.md  config.json
.pipeline/benchmarks/: M1.1-lexer.jsonl  M1.2-parser.jsonl  M1.3-hir.jsonl  M1.4-codegen.jsonl  M1.5-e2e.jsonl  baselines.json  regression-config.json
.pipeline/milestones/: M1.1-lexer.json  M1.2-parser.json  M1.3-hir.json  M1.4-codegen.json  M1.5-e2e.json  M2.1-optimize-surfaces.json  M2.2-benchmark-harness.json  M2.3-optimize-cli.json  M2.4-matmul-demo.json  M3.1-transfer-protocol.json  M3.2-multi-agent-demo.json  M4.1-stdlib.json  M4.2-interop.json  M4.3-mcp-server.json  M5.1-self-hosting.json  M6.1-heap-alloc.json  M6.2-arena-alloc.json  M6.3-escape-analysis.json  M6.4-memory-benchmarks.json  M7.1-structs-cabi.json  M7.2-io-primitives.json  M7.3-coroutines.json  M7.4-job-system.json  M7.5-ecs.json  M7.6-vulkan-lux.json  M7.7-frame-alloc.json  M7.8-self-opt.json  M7.9-particle-demo.json
.pipeline/runs/: lux-integration-plan.md  lux-pessimistic-review.json  rendering-architecture.md  rendering-reviews.md
.pipeline/scripts/: gate-check.sh  orchestrator.sh  rollback.sh  run-architect.sh  run-benchmark.sh  run-coder.sh  run-pipeline.sh  run-reviewer.sh  run-tester.sh  verify-optimization.sh
.pipeline/templates/: architect.md  benchmark.md  coder.md  optimistic_code_reviewer.md  optimistic_design_reviewer.md  pessimistic_code_reviewer.md  pessimistic_design_reviewer.md  qa_agent.md  reviewer.md  tester.md
axiom-project/: CLAUDE.md  bootstrap.sh
axiom-project/crates/axiom-parser/: Cargo.toml
axiom-project/crates/axiom-parser/src/: ast.rs  lib.rs
axiom-renderer/: Cargo.toml
axiom-renderer/src/: gltf_load.rs  lib.rs  pbr.rs  renderer.rs
benchmarks/: generate_benchmarks.py  results.json  run_all.py
benchmarks/benchmarks_game/: 001_nbody.axm  001_nbody.c  002_spectral_norm.axm  002_spectral_norm.c  003_mandelbrot.axm  003_mandelbrot.c  004_fannkuch_redux.axm  004_fannkuch_redux.c  005_pidigits_simple.axm  005_pidigits_simple.c
benchmarks/compiler/: 001_lexer_throughput.axm  001_lexer_throughput.c  002_parser_sim.axm  002_parser_sim.c  003_hir_walk.axm  003_hir_walk.c  004_codegen_string.axm  004_codegen_string.c  005_full_pipeline.axm  005_full_pipeline.c
benchmarks/complex/: 001_matmul_256.axm  001_matmul_256.c  002_lu_decomposition.axm  002_lu_decomposition.c  003_gauss_elimination.axm  003_gauss_elimination.c  004_matrix_inverse_64.axm  004_matrix_inverse_64.c  005_nbody_3d_1000.axm  005_nbody_3d_1000.c  009_game_of_life.axm  (+50 more)
crates/axiom-codegen/: Cargo.toml
crates/axiom-codegen/src/: error.rs  lib.rs  llvm.rs  llvm_tests.rs
crates/axiom-driver/: Cargo.toml
crates/axiom-driver/runtime/: axiom_rt.c  axiom_rt_core.c  axiom_rt_coroutines.c  axiom_rt_io.c  axiom_rt_strings.c  axiom_rt_threading.c  axiom_rt_trace.c  axiom_rt_vec.c
crates/axiom-driver/src/: compile.rs  lsp.rs  main.rs  mcp.rs
crates/axiom-driver/tests/: e2e.rs
crates/axiom-optimize/: Cargo.toml
crates/axiom-optimize/src/: agent_api.rs  benchmark.rs  fuzz.rs  history.rs  lib.rs  llm_optimizer.rs  profile.rs  proposal.rs  surface.rs  transfer.rs
crates/axiom-optimize/tests/: matmul_integration.rs  multi_agent.rs
docs/: COMPILER_SELF_IMPROVEMENT.md  EXAMPLES_BENCHMARKS_PLAN.md  MASTER_TASK_LIST.md  MULTITHREADING_ANALYSIS.md  OPTIMIZATION_KNOWLEDGE.md  PHASE7_GAME_ENGINE_PLAN.md  RENDERING_PLAN.md  SELF_OPT_PASS1_LEARNINGS.md  SELF_OPT_PASS2_LEARNINGS.md  SELF_OPT_PASS3_FINDINGS.md  VULKAN_INTEGRATION_PLAN.md
lib/: audio.axm  gpu.axm  input.axm  renderer.axm  test_vis.axm
scripts/: self_optimize.sh
spec/: annotations.md  generics.md  grammar.ebnf  optimization.md  transfer.md  types.md
(+506 files in other folders)
