[workspace]
resolver = "2"
members = [
    "crates/axiom-lexer",
    "crates/axiom-parser",
    "crates/axiom-hir",
    "crates/axiom-mir",
    "crates/axiom-codegen",
    "crates/axiom-optimize",
    "crates/axiom-driver",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/axiom"
description = "AXIOM — AI eXchange Intermediate Optimization Medium"

[workspace.dependencies]
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
insta = { version = "1", features = ["yaml"] }
