[package]
name = "axiom-driver"
version.workspace = true
edition.workspace = true

[[bin]]
name = "axiom"
path = "src/main.rs"

[dependencies]
axiom-lexer = { path = "../axiom-lexer" }
axiom-parser = { path = "../axiom-parser" }
axiom-hir = { path = "../axiom-hir" }
axiom-codegen = { path = "../axiom-codegen" }
axiom-optimize = { path = "../axiom-optimize" }
clap.workspace = true
miette = { workspace = true, features = ["fancy"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
