[package]
name = "axiom-optimize"
version.workspace = true
edition.workspace = true

[dependencies]
axiom-lexer = { path = "../axiom-lexer" }
axiom-parser = { path = "../axiom-parser" }
axiom-hir = { path = "../axiom-hir" }
axiom-codegen = { path = "../axiom-codegen" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
